<?xml version="1.0"?>
<package format="2">
  <name>unitree_hw</name>
  <version>1.0.0</version>
  <description>The unitree hardware package</description>

  <maintainer email="skywoodszcn@gmail.com">skywoodsz</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>cheetah_msgs</depend>

</package>
